refactor : InputHandler클래스 - hasDuplicates() 메소드 수정